WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80214
[Qt] Fix static_libs_as_shared build
https://bugs.webkit.org/show_bug.cgi?id=80214
Summary
[Qt] Fix static_libs_as_shared build
Simon Hausmann
Reported
2012-03-03 12:25:53 PST
[Qt] Fix static_libs_as_shared build
Attachments
Patch
(6.20 KB, patch)
2012-03-03 12:28 PST
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2012-03-03 12:28:37 PST
Created
attachment 130006
[details]
Patch
Simon Hausmann
Comment 2
2012-03-03 12:30:22 PST
Not the prettiest solution, but restores the mobile-theme as default for WK2 and allows choosing the QStyle theme when running WTR (or for manual testing).
WebKit Review Bot
Comment 3
2012-03-03 19:09:01 PST
Comment on
attachment 130006
[details]
Patch Clearing flags on attachment: 130006 Committed
r109669
: <
http://trac.webkit.org/changeset/109669
>
WebKit Review Bot
Comment 4
2012-03-03 19:09:06 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug