[Qt] Fix static_libs_as_shared build https://bugs.webkit.org/show_bug.cgi?id=80214

Patch by Simon Hausmann <simon.hausmann@nokia.com> on 2012-03-03
Reviewed by Tor Arne Vestbø.

Source/WebKit/qt:

Add helper function to be called by WebProcess main
to potentially initialize the QStyle theme.

* WebCoreSupport/InitWebCoreQt.cpp:
(WebKit):
(WebKit::initializeWebKit2Theme):

Source/WebKit2:

Replace (static) link time dependency to WK1 with entrypoint
in the separate WebProcess for activating the QStyle theme if
necessary.

* Target.pri:
* UIProcess/Launcher/ProcessLauncher.h:
* WebProcess/qt/WebProcessMainQt.cpp:
(WebKit::WebProcessMainQt):
* qt/MainQt.cpp:
(WebKit):
(main):

Tools:

* WebKitTestRunner/qt/main.cpp:
(main): Set the correct environment variable for choosing the theme in the
web process.

Canonical link: https://commits.webkit.org/97339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109669 268f45cc-cd09-0410-ab3c-d52691b4dbfc