Source/WebKit2/Target.pri
@@ -725,8 +725,6 @@ SOURCES += \
     WebProcess/qt/WebProcessMainQt.cpp \
     WebProcess/qt/WebProcessQt.cpp
 
-INCLUDEPATH += ../WebKit/qt/WebCoreSupport
-
 mac: {
     INCLUDEPATH += \
         Platform/mac \
